src/objects/Demo_Request__c.object
<CustomObject>
    <fields>
        <fullName>Demo_Team__c</fullName>
        <label>Demo Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Becca Webb</fullName>
                </value>
                <value>
                    <fullName>Bruce Baartman</fullName>
                </value>
                <value>
                    <fullName>Dan Freemark</fullName>
                </value>
                <value>
                    <fullName>David Amaya</fullName>
                </value>
                <value>
                    <fullName>Elton Kee</fullName>
                </value>
                <value>
                    <fullName>Eric Wisherd</fullName>
                </value>
                <value>
                    <fullName>Freddy Bejar</fullName>
                </value>
                <value>
                    <fullName>Gary Loflin</fullName>
                </value>
                <value>
                    <fullName>Greg Hannah</fullName>
                </value>
                <value>
                    <fullName>Karen Southerland</fullName>
                </value>
                <value>
                    <fullName>Kelly Fontes</fullName>
                </value>
                <value>
                    <fullName>Liz Byers</fullName>
                </value>
                <value>
                    <fullName>Matthew Klein</fullName>
                </value>
                <value>
                    <fullName>Nikki Britto</fullName>
                </value>
                <value>
                    <fullName>Paul Labriola</fullName>
                </value>
                <value>
                    <fullName>Quintus Hampton</fullName>
                </value>
                <value>
                    <fullName>Robert Mabe</fullName>
                </value>
                <value>
                    <fullName>Ruth Cruz</fullName>
                </value>
                <value>
                    <fullName>Sheri Pender</fullName>
                </value>
                <value>
                    <fullName>TC Thomas</fullName>
                </value>
                <value>
                    <fullName>Tiffany Huber</fullName>
                </value>
                <value>
                    <fullName>William Gray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Type__c</fullName>
        <label>Demo Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Introductory_First_Pass</fullName>
                    <label>First Pass</label>
                </value>
                <value>
                    <fullName>Pre_RFP</fullName>
                    <label>General Demo</label>
                </value>
                <value>
                    <fullName>Final/Non-RFP</fullName>
                    <label>Finals - Non RFP</label>
                </value>
                <value>
                    <fullName>Final_Post_RFP</fullName>
                    <label>Finals - Shortlist</label>
                </value>
                <value>
                    <fullName>Web/Teleconference</fullName>
                    <label>Web Demo</label>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_wiki__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo wiki</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Results_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Results Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dress_Code_Expected__c</fullName>
        <label>Dress Code Expected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Professional (Suit/Tie)</fullName>
                </value>
                <value>
                    <fullName>Business Casual (Shirt/Slacks)</fullName>
                </value>
                <value>
                    <fullName>TriTech Professional (Branded)</fullName>
                </value>
                <value>
                    <fullName>Zuercher Professional (Branded)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drop_Off_Address__c</fullName>
        <label>Drop Off Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DummyTouchField__c</fullName>
        <label>DummyTouchField</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes:
Field Workflow: Checkbox = True If Products to be Demo’d includes FireRecords</description>
        <label>Fire Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_Drinks_Needed__c</fullName>
        <label>Food/Drinks Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIS_Analyst_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GIS Analyst Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IQ_and_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes:
Field Workflow: Checkbox = True If Products to be Demo’d includes Inform IQ/Analytics</description>
        <label>IQ and Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_List__c</fullName>
        <description>Add on field for &quot;Key Areas of the SW to Highlight&quot;</description>
        <label>If Other, Please List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internet_Availability__c</fullName>
        <label>Internet Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wired</fullName>
                </value>
                <value>
                    <fullName>Wifi</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jail_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes:  
Field Workflow: Checkbox = True If Products to be Demo’d includes Inform Jail</description>
        <label>Jail Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Areas_of_the_SW_to_Highlight__c</fullName>
        <label>Key Areas of the SW to Highlight</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Extend eCitations</fullName>
                </value>
                <value>
                    <fullName>Extend FBR</fullName>
                </value>
                <value>
                    <fullName>Extend Jail</fullName>
                </value>
                <value>
                    <fullName>Field Ops</fullName>
                </value>
                <value>
                    <fullName>Full Financial</fullName>
                </value>
                <value>
                    <fullName>IMPACT</fullName>
                </value>
                <value>
                    <fullName>IQ/Omega</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Municipal Courts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Laptop_s__c</fullName>
        <label>Laptop #&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logistics_Team_Hotel__c</fullName>
        <inlineHelpText>Hotel address for the logistics team</inlineHelpText>
        <label>Logistics Team Hotel</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MARKETING_REQUEST_COMPLETE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MARKETING REQUEST COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Email_Formula__c</fullName>
        <formula>CreatedBy.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Needs_Quantity__c</fullName>
        <label>Marketing Needs/Quantity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <label>Materials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brochure: 911</fullName>
                </value>
                <value>
                    <fullName>Brochure: Administration</fullName>
                </value>
                <value>
                    <fullName>Brochure: AVL Playback</fullName>
                </value>
                <value>
                    <fullName>Brochure: CAD</fullName>
                </value>
                <value>
                    <fullName>Brochure: Civil</fullName>
                </value>
                <value>
                    <fullName>Brochure: CLQ</fullName>
                </value>
                <value>
                    <fullName>Brochure: Courts</fullName>
                </value>
                <value>
                    <fullName>Brochure: CrimeMapping</fullName>
                </value>
                <value>
                    <fullName>Brochure: CrimeView Dashboard</fullName>
                </value>
                <value>
                    <fullName>Brochure: Custom Forms</fullName>
                </value>
                <value>
                    <fullName>Brochure: Custom Modules</fullName>
                </value>
                <value>
                    <fullName>Brochure: Data Conversion</fullName>
                </value>
                <value>
                    <fullName>Brochure: Extend Accident Reporting</fullName>
                </value>
                <value>
                    <fullName>Brochure: Extend eCitations</fullName>
                </value>
                <value>
                    <fullName>Brochure: Extend Jail</fullName>
                </value>
                <value>
                    <fullName>Brochure: Extend Property and Evidence</fullName>
                </value>
                <value>
                    <fullName>Brochure: Field Ops</fullName>
                </value>
                <value>
                    <fullName>Brochure: Financial</fullName>
                </value>
                <value>
                    <fullName>Brochure: GIS Services</fullName>
                </value>
                <value>
                    <fullName>Brochure: Insight</fullName>
                </value>
                <value>
                    <fullName>Brochure: IQ Zuercher</fullName>
                </value>
                <value>
                    <fullName>Brochure: Jail</fullName>
                </value>
                <value>
                    <fullName>Brochure: Mapping</fullName>
                </value>
                <value>
                    <fullName>Brochure: Mobile CAD</fullName>
                </value>
                <value>
                    <fullName>Brochure: Mobile Records</fullName>
                </value>
                <value>
                    <fullName>Brochure: Near Me</fullName>
                </value>
                <value>
                    <fullName>Brochure: Portal</fullName>
                </value>
                <value>
                    <fullName>Brochure: Project Implementation</fullName>
                </value>
                <value>
                    <fullName>Brochure: Property and Evidence</fullName>
                </value>
                <value>
                    <fullName>Brochure: Prosecution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes:
Field Workflow: Checkbox = True If Products to be Demo’d includes Inform ME and/or Inform Mobile</description>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nameplate_Cards_Needed__c</fullName>
        <label>Nameplate Cards Needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nearest_Airport__c</fullName>
        <label>Nearest Airport</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Laptops_Needed__c</fullName>
        <label>Number of Laptops Needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Monitors_Needed__c</fullName>
        <label>Number of Monitors Needed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Projectors_Needed__c</fullName>
        <label>Number of Projectors Needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Screens_Needed__c</fullName>
        <label>Number of Screens Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Discovery_Date__c</fullName>
        <label>On-Site Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Demo Requests</relationshipLabel>
        <relationshipName>Demo_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes:
Field Workflow: Checkbox = True If Products to be Demo’d includes TC RMS, TE RMS, DN CAD/Mobile and/or Other/3rd Party</description>
        <label>Other/3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Equipment_Needed__c</fullName>
        <label>Other Equipment Needed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_ZT_People_Attending__c</fullName>
        <label>Other ZT People Attending</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performed_On_Site_Discovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed On-Site Discovery?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peripheral_devices_needed__c</fullName>
        <label>Peripheral devices needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barcode Scanner</fullName>
                </value>
                <value>
                    <fullName>Driver&apos;s License Scanners</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>IRIS</fullName>
                </value>
                <value>
                    <fullName>M2SYS</fullName>
                </value>
                <value>
                    <fullName>Mug Shot Camera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permission_to_Record_Demo__c</fullName>
        <label>Permission to Record Demo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permission granted</fullName>
                </value>
                <value>
                    <fullName>Permission denied</fullName>
                </value>
                <value>
                    <fullName>Permission not requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pickup_Address__c</fullName>
        <label>Pickup Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_to_be_Demo_d__c</fullName>
        <label>Products to be Demo&apos;d</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DN CAD/Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Ops</fullName>
                </value>
                <value>
                    <fullName>FireRecords</fullName>
                </value>
                <value>
                    <fullName>Inform 911</fullName>
                </value>
                <value>
                    <fullName>Inform CAD</fullName>
                </value>
                <value>
                    <fullName>Inform IQ/Analytics</fullName>
                </value>
                <value>
                    <fullName>Inform Jail</fullName>
                </value>
                <value>
                    <fullName>Inform ME</fullName>
                </value>
                <value>
                    <fullName>Inform Mobile</fullName>
                </value>
                <value>
                    <fullName>Inform RMS</fullName>
                </value>
                <value>
                    <fullName>Other/3rd Party</fullName>
                </value>
                <value>
                    <fullName>RMS Accessories</fullName>
                </value>
                <value>
                    <fullName>TC CAD</fullName>
                </value>
                <value>
                    <fullName>TC Mobile</fullName>
                </value>
                <value>
                    <fullName>TC RMS</fullName>
                </value>
                <value>
                    <fullName>TE RMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projector_Stands_Needed__c</fullName>
        <label>Projector Stands Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Records_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes:  
Field Workflow: Checkbox = True If Products to be Demo’d includes Inform RMS</description>
        <label>Records Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor_Mobile_Phone__c</fullName>
        <formula>CreatedBy.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Description__c</fullName>
        <label>Room Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large (room for more than 2 screens)</fullName>
                </value>
                <value>
                    <fullName>Medium (room for 2 screens)</fullName>
                </value>
                <value>
                    <fullName>Small (Room for 1 screen)</fullName>
                </value>
                <value>
                    <fullName>Very Small (No screens)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room_Dimensions__c</fullName>
        <description>Room Dimensions for TriTech Page Layouts</description>
        <label>Room Dimensions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screen_Size__c</fullName>
        <label>Screen Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6 ft</fullName>
                </value>
                <value>
                    <fullName>7 ft</fullName>
                </value>
                <value>
                    <fullName>8 ft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sharpies_Needed__c</fullName>
        <label>Sharpies Needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions_If_needed__c</fullName>
        <label>Shipping Instructions (If needed)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Needed__c</fullName>
        <inlineHelpText>You also need to submit a Solution Architect - Assistance Request CWI to request a SA for the demo</inlineHelpText>
        <label>Solution Architect Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Architect_s__c</fullName>
        <label>Solution Architect(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Darrell Richards</fullName>
                </value>
                <value>
                    <fullName>Del Pullen</fullName>
                </value>
                <value>
                    <fullName>Jeff Thau</fullName>
                </value>
                <value>
                    <fullName>Keith Singleton</fullName>
                </value>
                <value>
                    <fullName>Kurt Hallmeyer</fullName>
                </value>
                <value>
                    <fullName>Mark Catone</fullName>
                </value>
                <value>
                    <fullName>Matt Manzano</fullName>
                </value>
                <value>
                    <fullName>Noemi Aguiar</fullName>
                </value>
                <value>
                    <fullName>Scott Nemetz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_database_needed__c</fullName>
        <label>State database needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>No DT Resource Required</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swag__c</fullName>
        <label>Swag Demo Team Will Bring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tablecloth_s_Needed__c</fullName>
        <label>Tablecloth(s) Needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Theme_Theme_Points__c</fullName>
        <label>Theme &amp; Theme Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Vendor__c</fullName>
        <label>Third Party Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Attendees__c</fullName>
        <label>Total Number of Attendees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriTech_Logo_Stand_Needed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TriTech Logo Stand Needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriTech_Requestor__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriTech Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_bringing_projectors__c</fullName>
        <label>Who is bringing projectors?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_is_bringing_screens__c</fullName>
        <label>Who is bringing screens?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_AV_Company_Setup__c</fullName>
        <label>Will AV Company setup or just drop off?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drop off only</fullName>
                </value>
                <value>
                    <fullName>Setup and drop off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_AV_Company_tear_down_screens__c</fullName>
        <label>Will AV Company tear down screens?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup only</fullName>
                </value>
                <value>
                    <fullName>Tear down and pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X911__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes:
Field Workflow: Checkbox = True If Products to be Demo’d includes Inform 911</description>
        <label>911</label>
        <type>Checkbox</type>
    </fields>
    <label>Demo Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Client_Organization_Name__c</columns>
        <columns>Demo_Set_up_Date__c</columns>
        <columns>Demo_Start_Date__c</columns>
        <columns>Demo_End_Date__c</columns>
        <columns>Demo_Team__c</columns>
        <columns>Products_to_be_Demo_d__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Client_Organization_Name__c</columns>
        <columns>Products_to_be_Demo_d__c</columns>
        <columns>Status__c</columns>
        <columns>Demo_Set_up_Date__c</columns>
        <columns>Demo_Start_Date__c</columns>
        <columns>Demo_End_Date__c</columns>
        <columns>Demo_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,Assigned,Additional Information Required,No DT Resource Required</value>
        </filters>
        <label>All Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Upcoming_Demos</fullName>
        <columns>NAME</columns>
        <columns>Client_Organization_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Products_to_be_Demo_d__c</columns>
        <columns>Demo_Type__c</columns>
        <columns>Demo_Start_Date__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>Demo_Team__c</columns>
        <columns>DEMO_REQUEST_COMPLETE__c</columns>
        <columns>Demo_Booklets__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Demo_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Upcoming Demos</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Upcoming_Demos_Zuercher</fullName>
        <columns>NAME</columns>
        <columns>Client_Organization_Name__c</columns>
        <columns>Demo_Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Demo_Team__c</columns>
        <columns>TriTech_Requestor__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>DEMO_REQUEST_COMPLETE__c</columns>
        <columns>Demo_Booklets__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Demo_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Demo_Request__c.Zuercher_Demo_Request</value>
        </filters>
        <label>Upcoming Demos Zuercher</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>